# cgeom_2025

./: README.md
examples/: DatasetSources.md
examples/aabb_hierarchy/: AABB.py  AABBHierachy.py  BinaryNode.py  FileObj3d.py  ProgramState.py  scalar.py  v3.py
examples/example_PyOpenGL/: BarplotList.py  Blending.py  ColorplotList.py  ConvexIntersection.py  DelaunayTriang.py  FileObj.py  FileObj_org.py  GrahamsScan.py  PointScene.py  colormap_from_named_colors_rgb.py  draw2d.py  draw2d_fill.py  float.py  generate_new_colormap_from_named_colors_rgb.py  graham.py  obj_visualization.py
examples/example_cpp/: CMakeLists.txt  draw2d.cpp
